fix image paths

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
     
-    <h1>Tabletop Games</h1>
+    <h1>Tabletop Games Google Doodle</h1>
+    <img src="img/cards.jpg" alt="">
+    <img src="/img/cards.jpg" alt="">
 
 
 
