--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
 
 
     <!-- JS Libraries -->
-
     <!-- My Scripts -->
+    <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <!-- Motion Path Plugin -->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js"></script>
 
 </body>
