trying to figure out issues
* will not animate like in codepen
* doesn't look like my codepen pens

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tabletop Games</title>
+    <title>International Tabletop Day</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -87,15 +87,10 @@
   
   </main>
 
-
-
-
-    <!-- JS Libraries -->
     <!-- My Scripts -->
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
     <!-- Motion Path Plugin -->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js"></script>
-
 </body>
 </html>
