--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
   </main>
 
     <!-- My Scripts -->
+    <script src="js/scripts.js"></script>
     <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.0/gsap.min.js"></script>
     <!-- Motion Path Plugin -->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js"></script>
 </body>
