added links to github repo and website

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
   
     <input type="text" />
     <div id="search">
-      <button>Google Search</button>
-      <button>I'm Feeling Lucky</button>
+      <a href="https://github.com/lragudo/google-doodle"><button>Github repo</button></a>
+      <a href="https://www.lillianrosedesign.com/"><button>Lillian Rose Design Website</button></a>
     </div>
   
   </main>
